--- a/app/src/main/res/layout/item_test.xml
+++ b/app/src/main/res/layout/item_test.xml
@@ -6,5 +6,6 @@
         android:id="@+id/item_test_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="11111"/>
+        android:gravity="center"
+        android:padding="20dp"/>
 </LinearLayout>
